# cursor_experiments

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
hooks/: QUICKSTART.sh  README.md  SETUP.md  TUTORIAL.md  hooks.json  test-observability.sh
hooks/ai-llm-hooks/: README.md  agent_orchestration.py
hooks/git-hooks/: README.md
hooks/hooks/: analyze-response.sh  audit-shell.sh  check-secrets.sh  enhance-prompt.sh  finalize-session.sh  format-code.sh  log-execution.sh  observability.sh  redact-secrets.sh  security-check.sh
hooks/python-hooks/: README.md  __init__.py  async_hooks.py  decorator_hooks.py  example_usage.py  fastapi_middleware_hooks.py
hooks/react-hooks/: README.md
hooks/system-hooks/: README.md
hooks/webhook-hooks/: README.md
