[project]
name = "cursor-experiments"
version = "1.0.0"
description = "Cutting-edge hook experiments pushing the boundaries of hook applications in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["hooks", "experiments", "python", "ai", "webhooks", "git-hooks", "async", "decorators"]
authors = [
    {name = "CuriousCaliBoi"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

